--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#home" class="active">Home</a></li>
         <li><a href="#profile">Our Profile</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#message">Message Us</a></li>
+        <li><a href="#message">Contact Me</a></li>
       </ul>
     </div>
   </header>
@@ -39,7 +39,7 @@
 
 
     <section id="profile" class="section">
-        <h3>Our Profile</h3>
+        <h2>Our Profile</h2>
             <div class="profile-container">
                 <div class="profile-image">
                 <img src="img/profile1.jpg" alt="Foto Profil" />
@@ -53,7 +53,7 @@
     </section>
 
     <section id="portfolio" class="section">
-      <h3>Portfolio</h3>
+      <h2>Portfolio</h2>
       <div class="portfolio-grid">
         <div class="portfolio-item">📁 Project A</div>
         <div class="portfolio-item">📁 Project B</div>
@@ -62,7 +62,7 @@
     </section>
 
     <section id="message" class="section">
-      <h3>Message Us</h3>
+      <h2>Contact Me</h2>
       <form id="messageForm">
         <label>Name:</label>
         <input type="text" id="name" placeholder="Masukkan Nama Anda" required />
