--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section id="home" class="section">
         <div class="home-container">
             <div class="home-text">
-            <h2>Hi! This is <span id="userName">Guest</span>'s Website</h2>
+            <h2>Hi! <span id="userName">Guest</span> This is Annisa's Website</h2>
             <p>
                 Ini adalah website portofolio pertamaku. Kamu bisa mengeksplor portofolioku di halaman
                 <q>Portofolio</q>. Ayo kenal lebih lanjut tentangku!
